add results, findings, and conclusions to the notebook

--- a/student_exam_performance.ipynb
+++ b/student_exam_performance.ipynb
@@ -5200,7 +5200,7 @@
    "id": "c39c9531",
    "metadata": {},
    "source": [
-    "## Pass or Fail by Ethnicity\n",
+    "\n",
     "Students who passed and failed by Ethnicity"
    ]
   },
@@ -5460,6 +5460,66 @@
     "Writing: 68.05\n",
     "\n",
     "Each subject has a wide score range, with Math having the lowest minimum score (0). The standard deviation is around 15 for each subject, indicating moderately dispersed performance. Most students score between 57–77, suggesting a generally mid-level performance with a few outliers on both end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acf8e64",
+   "metadata": {},
+   "source": [
+    "# Results and Findings\n",
+    "1. Data Cleaning\n",
+    "- The dataset was successfully cleaned. New columns like average_score, passed, normalized, and honor_student were added to support the analysis.\n",
+    "\n",
+    "2. Descriptive Statistics\n",
+    "- Average scores:\n",
+    "    Math: 66.14\n",
+    "    Reading: 69.17\n",
+    "    Writing: 68.05\n",
+    "- Standard deviation (~15) shows moderate variability.\n",
+    "- Most scores fall between 57 and 77.\n",
+    "\n",
+    "3. Honor Students by Gender\n",
+    "- Female: 38\n",
+    "- Male: 14\n",
+    "\n",
+    "    → More female students achieved honor-level performance (average ≥ 90).\n",
+    "\n",
+    "4. Pass/Fail by Ethnicity\n",
+    "- Passing defined as average score ≥ 75.\n",
+    "    - Passed:\n",
+    "        - Group C: 94\n",
+    "        - Group D: 89\n",
+    "        - Group E: 66\n",
+    "        - Group B: 57\n",
+    "        - Group A: 19\n",
+    "    - Failed:\n",
+    "        - Group C: 225\n",
+    "        - Group D: 173\n",
+    "        - Group B: 133\n",
+    "        - Group E: 74\n",
+    "        - Group A: 70\n",
+    "        \n",
+    "    → Group C has the largest student population. Group E has a better\n",
+    "      pass-to-fail ratio.\n",
+    "\n",
+    "5. Test Preparation and Normalized Scores\n",
+    "- Completed course: 0.73\n",
+    "- No prep: 0.65\n",
+    "\n",
+    "    → Students who completed preparation performed better overall.\n",
+    "\n",
+    "6. Correlation Matrix\n",
+    "- Math & Reading: 0.815\n",
+    "- Math & Writing: 0.800\n",
+    "- Reading & Writing: 0.955\n",
+    "\n",
+    "    → All subjects are strongly correlated, especially reading and writing.\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "- All requirements were met. The analysis revealed clear trends in student \n",
+    "performance across subjects, genders, ethnicities, and preparation backgrounds."
    ]
   }
  ],
