add Sort Rows to notebook

--- a/student_exam_performance.ipynb
+++ b/student_exam_performance.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fcdac1df",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "e373ab13",
    "metadata": {},
    "outputs": [],
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "id": "34d9f3b7",
    "metadata": {},
    "outputs": [],
@@ -4581,6 +4581,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e66794b",
+   "metadata": {},
+   "source": [
+    "### Sort Rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "841e94b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      89\n",
+       "1      69\n",
+       "2      90\n",
+       "3      47\n",
+       "4      76\n",
+       "       ..\n",
+       "995    88\n",
+       "996    62\n",
+       "997    59\n",
+       "998    68\n",
+       "999    77\n",
+       "Name: math_score, Length: 1000, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by='math_score', ascending=False)\n",
+    "df.math_score "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a3b0231",
    "metadata": {},
    "source": [
@@ -5539,7 +5580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
