--- a/student_exam_performance.ipynb
+++ b/student_exam_performance.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "47cfad40",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "cac1bcfc",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "4                    none          76             78            75  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "2570a61c",
    "metadata": {},
    "outputs": [],
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "fbdaa3cc",
    "metadata": {},
    "outputs": [],
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "44f50366",
    "metadata": {},
    "outputs": [
@@ -4496,7 +4496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "64e2c6e6",
    "metadata": {},
    "outputs": [
@@ -4589,35 +4589,268 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "841e94b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race_ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test_preparation_course</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
+       "      <th>average_score</th>\n",
+       "      <th>passed</th>\n",
+       "      <th>normalized</th>\n",
+       "      <th>honor_student</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>89</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "      <td>78.333333</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.783333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "      <td>82.333333</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.823333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
+       "      <td>92.666667</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.926667</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
+       "      <td>49.333333</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.493333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>76.333333</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.763333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>88</td>\n",
+       "      <td>99</td>\n",
+       "      <td>95</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.940000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>62</td>\n",
+       "      <td>55</td>\n",
+       "      <td>55</td>\n",
+       "      <td>57.333333</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.573333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>59</td>\n",
+       "      <td>71</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>68</td>\n",
+       "      <td>78</td>\n",
+       "      <td>77</td>\n",
+       "      <td>74.333333</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.743333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>77</td>\n",
+       "      <td>86</td>\n",
+       "      <td>86</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.830000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 12 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0      89\n",
-       "1      69\n",
-       "2      90\n",
-       "3      47\n",
-       "4      76\n",
-       "       ..\n",
-       "995    88\n",
-       "996    62\n",
-       "997    59\n",
-       "998    68\n",
-       "999    77\n",
-       "Name: math_score, Length: 1000, dtype: int64"
+       "     gender race_ethnicity parental_level_of_education         lunch  \\\n",
+       "0    female        group B           bachelor's degree      standard   \n",
+       "1    female        group C                some college      standard   \n",
+       "2    female        group B             master's degree      standard   \n",
+       "3      male        group A          associate's degree  free/reduced   \n",
+       "4      male        group C                some college      standard   \n",
+       "..      ...            ...                         ...           ...   \n",
+       "995  female        group E             master's degree      standard   \n",
+       "996    male        group C                 high school  free/reduced   \n",
+       "997  female        group C                 high school  free/reduced   \n",
+       "998  female        group D                some college      standard   \n",
+       "999  female        group D                some college  free/reduced   \n",
+       "\n",
+       "    test_preparation_course  math_score  reading_score  writing_score  \\\n",
+       "0                      none          89             72             74   \n",
+       "1                 completed          69             90             88   \n",
+       "2                      none          90             95             93   \n",
+       "3                      none          47             57             44   \n",
+       "4                      none          76             78             75   \n",
+       "..                      ...         ...            ...            ...   \n",
+       "995               completed          88             99             95   \n",
+       "996                    none          62             55             55   \n",
+       "997               completed          59             71             65   \n",
+       "998               completed          68             78             77   \n",
+       "999                    none          77             86             86   \n",
+       "\n",
+       "     average_score  passed  normalized  honor_student  \n",
+       "0        78.333333    True    0.783333          False  \n",
+       "1        82.333333    True    0.823333          False  \n",
+       "2        92.666667    True    0.926667           True  \n",
+       "3        49.333333   False    0.493333          False  \n",
+       "4        76.333333    True    0.763333          False  \n",
+       "..             ...     ...         ...            ...  \n",
+       "995      94.000000    True    0.940000           True  \n",
+       "996      57.333333   False    0.573333          False  \n",
+       "997      65.000000   False    0.650000          False  \n",
+       "998      74.333333   False    0.743333          False  \n",
+       "999      83.000000    True    0.830000          False  \n",
+       "\n",
+       "[1000 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sort_values(by='math_score', ascending=False)\n",
-    "df.math_score "
+    "sort = df.sort_values(by='math_score', ascending=False)\n",
+    "\n",
+    "sort "
    ]
   },
   {
@@ -4638,7 +4871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "2f00b597",
    "metadata": {},
    "outputs": [
@@ -4780,12 +5013,14 @@
        "4      76.333333    True    0.763333          False  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv(\"final_StudentsPerformance.csv\")\n",
     "\n",
     "df.head()"
@@ -4801,7 +5036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "c18ea9fe",
    "metadata": {},
    "outputs": [
