add about dataset

--- a/student_exam_performance.ipynb
+++ b/student_exam_performance.ipynb
@@ -7,11 +7,21 @@
    "source": [
     "# Student Exam Performance Report\n",
     "\n",
-    "Author: PolyTech\n",
-    "Date: July 2025  \n",
+    "**Author:** PolyTech  \n",
+    "**Date:** July 2025  \n",
     "\n",
     "In this report, we analyze real-world exam performance data using NumPy, Pandas, and Matplotlib.  \n",
-    "We’ll inspect trends, clean the data, and visualize student results across Math, Reading, and Writing."
+    "We’ll inspect trends, clean the data, and visualize student results across Math, Reading, and Writing.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## About Dataset\n",
+    "\n",
+    "This dataset is designed to help explore how different factors \n",
+    "such as gender, ethnicity, parental education, lunch type, \n",
+    "and test preparation influence students' academic performance.  \n",
+    "It can be used for education-related data analysis, \n",
+    "predictive modeling, or statistical practice."
    ]
   },
   {
